vm runtime support.

--- a/benchmark-java-webapp/src/main/webapp/index.html
+++ b/benchmark-java-webapp/src/main/webapp/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Start Page</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    </head>
-    <body>
-        <h1>Hello World!</h1>
-    </body>
+  <head>
+    <title>Start Page</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  </head>
+  <body>
+    <h1>Hello World!</h1>
+    <ul>
+      <li>  <a href ="/Servlet1">Servlet1 (in web.xml)</a></li>
+      <li>  <a href ="/Servlet2">Servlet2</a></li>
+      <li>  <a href ="/Servlet3">Servlet3</a></li>
+      <li>  <a href ="/Servlet4">Servlet4</a></li>
+      <li>  <a href ="/Servlet5">Servlet5</a></li>
+      <li>  <a href ="/Servlet10">Annotated Servlet10</a></li>
+      <li>  <a href ="/Servlet11">Annotated Servlet11</a></li>
+      <li>  <a href ="/Servlet12">Annotated Servlet12</a></li>
+      <li>  <a href ="/Servlet13">Annotated Servlet13</a></li>
+      <li>  <a href ="/Servlet14">Annotated Servlet14</a></li>
+      <li>  <a href ="/Servlet15">Annotated Servlet15</a></li>
+    </ul>
+  </body>
 </html>
